--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,1 +1,7 @@
-<p>users works!</p>
+<div class="container mt-5">
+  
+    <h2>List of all users</h2>
+    <br>
+    <button (click)="onGetUsers()">Get Users</button>
+
+</div>
