Create new user on button click

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,6 +3,7 @@
     <h2>List of all users</h2>
     <br>
     <button (click)="onGetUsers()">Get Users</button>
+    <button (click)="onCreateUser()">Post User</button>
 
 
 
