--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,14 +1,54 @@
 <div class="container mt-5">
   
     <h2>List of all users</h2>
-    <br>
-    <button (click)="onGetUsers()">Get Users</button>
-    <button (click)="onCreateUser()">Post User</button>
 
+    <div class="flex-container">
+        <div class="flex-child">
+            <div class = "form-group" id="searchbar" style="width:200px !important;">
+                <input id="search" type="text" style="font-size:12pt;" class="form-control search field" placeholder="Search Here" [(ngModel)]="searchText">
+            </div>
+        </div>
+    
+        <div class="flex-child">
+            <button (click)="onGetUsers()">Get Users</button>
+        </div>
 
-    <div class = "form-group" id="searchbar" style="width:200px !important;">
-        <input id="search" type="text" style="font-size:12pt;" class="form-control search field" placeholder="Search Here" [(ngModel)]="searchText">
+        <div class="flex-child">
+            <button (click)=toggleDisplayDivIf()>Add New User</button>
+        </div>
     </div>
+
+    <br>
+    
+    <div *ngIf="!isShowDivIf">
+        <form ngNativeValidate #form >
+            <div>
+                <label>First Name: </label>
+                <input type="text" placeholder="Toni" pattern="[A-Za-z0-9]{3,}" [(ngModel)]="user.FirstName" [ngModelOptions]="{standalone: true}" required>
+            </div>
+
+            <div>
+                <label>Last Name: </label>
+                <input type="text" placeholder="Test" pattern="[A-Za-z0-9]{3,}" [(ngModel)]="user.LastName" [ngModelOptions]="{standalone: true}" required>
+            </div>
+
+            <div>
+                <label>Full Name: </label>
+                <input type="text" placeholder="Toni Test"pattern="[A-Za-z0-9- ]{3,}" [(ngModel)]="user.FullName" [ngModelOptions]="{standalone: true}" required>
+            </div>
+
+            <div>
+                <label>Email: </label>
+                <input type="text" placeholder="toni@mail.si"pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" [(ngModel)]="user.Email" [ngModelOptions]="{standalone: true}" required>
+            </div>
+
+            <div>
+                <button (click)="onCreateUser()" name="submit"  type="submit">Add</button>
+            </div>
+        </form>
+    </div>
+   
+    <br>
 
     <table class="table table-striped" id="users">
         <thead>
